Fix peer resolution, update auth logic, and finalize configuration

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-BOT_TOKEN=8231069149:AAHHfR0zmikp1Rkz9n5iK2ERhco0aFpGBME
-ADMIN_ID=2061583051
+﻿BOT_TOKEN=8202944969:AAEJ4OcAt-K1BFXfo96OBe1AYkph6oNhtgY
+ADMIN_ID=7080441588
