Feat: Finalized Sniffer Licensing and Enhanced UI, Updated Zip Archive.

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
 BOT_TOKEN=1234567890:AAH...
 ADMIN_ID=123456789
+
+# Sniffer License (Required for Mode 2)
+# Set to VIP_YEARLY_2026 for Yearly VIP users
+SNIFFER_LICENSE=
