feat: Introduce license verification, migrate API credentials to .env, and add premium documentation.

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,15 @@
+# --- Telegram API Settings ---
+# Получите на https://my.telegram.org/apps
+API_ID=12345678
+API_HASH=abcdef1234567890abcdef1234567890
+
+# --- Bot Settings ---
+# Получите у @BotFather
 BOT_TOKEN=1234567890:AAH...
+
+# Ваш личный ID (узнать через @userinfobot)
 ADMIN_ID=123456789
 
-# Sniffer License (Required for Mode 2)
-# Set to VIP_YEARLY_2026 for Yearly VIP users
+# --- Licenses ---
+# Лицензионный ключ для режима сниффера (Mode 2)
 SNIFFER_LICENSE=
